--- a/css/m_index.css
+++ b/css/m_index.css
@@ -8,14 +8,9 @@
 }
 
 html,
-body,
-article {
-    height: 100%;
-}
-
-html,
 body {
-    overflow-y: hidden;
+    height: 100%;
+    overflow: hidden;
 }
 
 body {
@@ -26,15 +21,18 @@ body {
 img {
     max-width: 100%;
     max-height: 450px;
+    transition: all .5s;
 }
 
 h1 {
     padding: 10px 0;
     font-size: 1.2em;
+    transition: all .5s;
 }
 
 p {
     line-height: 2;
+    transition: all .5s;
 }
 
 header {
@@ -89,11 +87,12 @@ nav {
     padding: 0 5px 5px 5px;
     position: fixed;
     right: 0;
-    top: 49px;
+    top: 0;
     opacity: 0;
     height: 0;
     overflow: hidden;
     z-index: 90;
+    visibility: hidden;
 }
 
 nav a {
@@ -102,23 +101,67 @@ nav a {
 
 nav li {
     list-style: none;
+    border-bottom: 1px solid #163F53;
+    text-align: center;
+    overflow: hidden;
 }
 
-nav:target {
+nav li:last-child {
+    border-bottom: none;
+}
+
+
+/* ----------------------------- */
+
+.nav_animate {
+    visibility: visible;
     animation: navShow 1s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1
 }
 
-nav:not(:target) {
-    animation: navHide .5s;
+.nav_animate li a {
+    position: relative;
+    animation: liShow 1s;
     animation-fill-mode: forwards;
     animation-iteration-count: 1
 }
 
+.nav_animate_remove {
+    animation: navHide 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1
+}
+
+/* ------------------------------ */
+
+
+/*
+nav:target {
+    visibility: visible;
+    animation: navShow 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1
+}
+
+nav:target li a {
+    position: relative;
+    animation: liShow 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1
+}
+
+nav:not(:target) {
+    animation: navHide 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1
+}
+*/
+
 article {
     position: relative;
     z-index: 1;
+    height: 100%
 }
 
 article section {
@@ -128,14 +171,8 @@ article section {
     top: 0;
     padding: 59px 5px 0 5px;
     min-height: 100%;
-    overflow: hidden;
-    opacity: 0;
     color: #fff;
     width: 100%;
-}
-
-section#element1 {
-    visibility: visible;
 }
 
 article section:target {
@@ -146,26 +183,40 @@ article section:target {
 }
 
 article section:not(:target) {
-    animation: sectionHide 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
+    z-index: 1;
 }
 
 @keyframes navShow {
     0% {
         height: 0;
+        width: 0;
         opacity: 0;
     }
-    100% {
-        opacity: 0.8;
+    50% {
+        top: 100px;
+        right: 0;
+        width: 90%;
         height: auto;
+    }
+    100% {
+        top: 100px;
+        right: 0;
+        width: 90%;
+        height: auto;
+        opacity: 0.8;
     }
 }
 
 @keyframes navHide {
     0% {
-        opacity: 0.8;
+        top: 100px;
+        left: 10px;
+        width: 90%;
         height: auto;
+        opacity: 0.8;
+    }
+    50% {
+        opacity: 0;
     }
     100% {
         height: 0;
@@ -175,30 +226,28 @@ article section:not(:target) {
 
 @keyframes sectionShow {
     0% {
+        left: -100%;
         opacity: 0;
     }
     100% {
+        left: 0;
         opacity: 1;
-        z-index: 10;
     }
 }
 
-@keyframes sectionHide {
+@keyframes liShow {
     0% {
-        opacity: 1;
+        top: 50px;
+    }
+    90% {
+        top: -10px;
     }
     100% {
-        opacity: 0;
-        z-index: 1;
+        top: 0;
     }
 }
 
-.swiper-container,
-.swiper-container1,
-.swiper-container2,
-.swiper-container3,
-.swiper-container4,
-.swiper-container5 {
+.swiper-container {
     width: 100%;
     height: 100%;
 }
