--- a/css/m_index.css
+++ b/css/m_index.css
@@ -21,18 +21,15 @@ body {
 img {
     max-width: 100%;
     max-height: 450px;
-    transition: all .5s;
 }
 
 h1 {
     padding: 10px 0;
     font-size: 1.2em;
-    transition: all .5s;
 }
 
 p {
     line-height: 2;
-    transition: all .5s;
 }
 
 header {
@@ -115,48 +112,35 @@ nav li:last-child {
 
 .nav_animate {
     visibility: visible;
-    animation: navShow 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
+    -webkit-animation: navShow 1s;
+            animation: navShow 1s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1
 }
 
 .nav_animate li a {
     position: relative;
-    animation: liShow 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
+    -webkit-animation: liShow 1s;
+            animation: liShow 1s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1
 }
 
 .nav_animate_remove {
-    animation: navHide 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
+    -webkit-animation: navHide 1s;
+            animation: navHide 1s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1
 }
+
 
 /* ------------------------------ */
-
-
-/*
-nav:target {
-    visibility: visible;
-    animation: navShow 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
-}
-
-nav:target li a {
-    position: relative;
-    animation: liShow 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
-}
-
-nav:not(:target) {
-    animation: navHide 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
-}
-*/
 
 article {
     position: relative;
@@ -177,16 +161,23 @@ article section {
 
 article section:target {
     visibility: visible;
-    animation: sectionShow 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1
+    opacity: 1;
+    -webkit-animation: sectionShow 1s;
+            animation: sectionShow 1s;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1
 }
 
 article section:not(:target) {
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -o-transition: all 1s;
     z-index: 1;
+    opacity: 0;
 }
 
-@keyframes navShow {
+@-webkit-keyframes navShow {
     0% {
         height: 0;
         width: 0;
@@ -207,6 +198,42 @@ article section:not(:target) {
     }
 }
 
+@keyframes navShow {
+    0% {
+        height: 0;
+        width: 0;
+        opacity: 0;
+    }
+    80% {
+        right: 0;
+        width: 90%;
+        height: auto;
+    }
+    100% {
+        right: 0;
+        width: 100%;
+        height: auto;
+        opacity: 0.9;
+    }
+}
+
+@-webkit-keyframes navHide {
+    0% {
+        top: 100px;
+        left: 10px;
+        width: 90%;
+        height: auto;
+        opacity: 0.8;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        height: 0;
+        opacity: 0;
+    }
+}
+
 @keyframes navHide {
     0% {
         top: 100px;
@@ -224,6 +251,17 @@ article section:not(:target) {
     }
 }
 
+@-webkit-keyframes sectionShow {
+    0% {
+        left: -100%;
+        opacity: 0;
+    }
+    100% {
+        left: 0;
+        opacity: 1;
+    }
+}
+
 @keyframes sectionShow {
     0% {
         left: -100%;
@@ -232,6 +270,18 @@ article section:not(:target) {
     100% {
         left: 0;
         opacity: 1;
+    }
+}
+
+@-webkit-keyframes liShow {
+    0% {
+        top: 50px;
+    }
+    90% {
+        top: -10px;
+    }
+    100% {
+        top: 0;
     }
 }
 
