--- a/css/default.css
+++ b/css/default.css
@@ -67,9 +67,7 @@ td {
     margin: 0;
     padding: 0;
     border: 0;
-    outline: 0;
     font-size: 100%;
-    vertical-align: baseline;
     background: transparent;
 }
 
@@ -561,6 +559,10 @@ nav h2:hover {
 
 
 /* ------------------------------- */
+
+.swiper-wrapper{
+    display: -webkit-box!important;
+}
 
 .swiper-container,
 .swiper-container1,
